# osx-hid-inspector

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cget-requirements.txt
.github/workflows/: ci.yml
include/pqrs/osx/: iokit_iterator.hpp  iokit_registry_entry.hpp
src/: .gitignore  CMakeLists.txt  Makefile  cget-requirements.txt  main.cpp  output_all_properties_json.cpp  output_usages.cpp  project.yml
src/src/: main.cpp  output_all_properties_json.cpp  output_usages.cpp
